[project]
name = "odoo-addons-oca-partner-contact"
version = "17.0.20240521.2"
dependencies = [
    "odoo-addon-base_location>=17.0dev,<17.1dev",
    "odoo-addon-base_location_geonames_import>=17.0dev,<17.1dev",
    "odoo-addon-base_partner_company_group>=17.0dev,<17.1dev",
    "odoo-addon-base_partner_sequence>=17.0dev,<17.1dev",
    "odoo-addon-partner_address_street3>=17.0dev,<17.1dev",
    "odoo-addon-partner_affiliate>=17.0dev,<17.1dev",
    "odoo-addon-partner_company_type>=17.0dev,<17.1dev",
    "odoo-addon-partner_contact_access_link>=17.0dev,<17.1dev",
    "odoo-addon-partner_contact_birthdate>=17.0dev,<17.1dev",
    "odoo-addon-partner_contact_gender>=17.0dev,<17.1dev",
    "odoo-addon-partner_contact_job_position>=17.0dev,<17.1dev",
    "odoo-addon-partner_contact_nationality>=17.0dev,<17.1dev",
    "odoo-addon-partner_contact_personal_information_page>=17.0dev,<17.1dev",
    "odoo-addon-partner_fax>=17.0dev,<17.1dev",
    "odoo-addon-partner_firstname>=17.0dev,<17.1dev",
    "odoo-addon-partner_identification>=17.0dev,<17.1dev",
    "odoo-addon-partner_industry_secondary>=17.0dev,<17.1dev",
    "odoo-addon-partner_manual_rank>=17.0dev,<17.1dev",
    "odoo-addon-partner_multi_relation>=17.0dev,<17.1dev",
    "odoo-addon-partner_pricelist_search>=17.0dev,<17.1dev",
    "odoo-addon-partner_ref_unique>=17.0dev,<17.1dev",
    "odoo-addon-partner_second_lastname>=17.0dev,<17.1dev",
    "odoo-addon-partner_stage>=17.0dev,<17.1dev",
    "odoo-addon-partner_stage_only_confirmed>=17.0dev,<17.1dev",
    "odoo-addon-partner_vat_unique>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
